# llm-sql

./: .gitignore  LICENSE  README.md  api.py  config.json  config.py  database.py  install.sh  llm.py  main.py  prompt.txt  pyproject.toml  table.sql
openapi/: anythingllm.json
