[project]
name = "llm-sql"
version = "0.1.0"
description = ""
authors = [{name = "Your Name",email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pandas = "2.2.3"
pypyodbc = "1.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
