[tool.poetry]
name = "llm-sql"
version = "0.1.0"
description = ""
authors = ["José Ferrão <joseferrao@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "2.2.3"
pypyodbc = "1.3.6"
fastapi = "0.115.12"
uvicorn = "0.34.0"
openai = "1.72.0"
markitdown  = { version = "0.1.1", extras = ["all"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
